--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>vue-board</title><link href="/css/app.9a42dca6.css" rel="preload" as="style"><link href="/js/app.c4a2feb3.js" rel="preload" as="script"><link href="/js/chunk-vendors.aaff1e37.js" rel="preload" as="script"><link href="/css/app.9a42dca6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-board doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.aaff1e37.js"></script><script src="/js/app.c4a2feb3.js"></script></body></html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>vue-board</title><link href="/css/app.9a42dca6.css" rel="preload" as="style"><link href="/js/app.c4a2feb3.js" rel="preload" as="script"><link href="/js/chunk-vendors.aaff1e37.js" rel="preload" as="script"><link href="/css/app.9a42dca6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-board doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><h1>사용자 정보를 입력하세요.</h1>
+    <form name="user" method="post" action="/regist">
+      <div class="input-row">
+        <label for="userid">아이디</label>
+        <input id="userid" name="userid" type="text">
+      </div>
+      <div class="input-row">
+        <label for="name">이름</label>
+        <input id="name" name="name" type="text">
+      </div>
+      <div class="input-row">
+        <label for="address">주소</label>
+        <input id="address" name="address" type="text">
+      </div>
+      <button type="submit">전송</button>
+    </form><script src="/js/chunk-vendors.aaff1e37.js"></script><script src="/js/app.c4a2feb3.js"></script></body></html>
